Fixed large gap when in audio mode

--- a/public/download/index.css
+++ b/public/download/index.css
@@ -53,7 +53,7 @@ body.loaded .widget {
 .extra-inputs-container {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 0.75rem;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
 }
@@ -432,7 +432,6 @@ button:hover {
     display: flex;
     flex-wrap: wrap;
     gap: 0.75rem;
-    margin-top: 0.75rem;
 }
 
 .settings-group .extra-input {
